--- a/my-app/src/Components/Hero/Hero.css
+++ b/my-app/src/Components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .Hero{
     width: 100%;
-    height: 150vh;
+    height:max-content;
     color: #fff;
     position: relative;
     overflow: hidden;
@@ -41,7 +41,7 @@
     padding: 1rem 40rem;
     padding-left:20px ;
     border: none;
-    opacity: 0.6;
+    opacity: 0.7;
 }
 .Content input:focus{
     outline: none;
