--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -41,7 +41,7 @@ h2 {
 .container{
   max-width: 1240px;
   margin:auto;
-  pad: 0 1rem;
+  padding: 0 1rem;
 }
 button{
   background-image: linear-gradient(45deg,var(--primary-dark)0%,var(--primary-light) 100%);
