--- a/my-app/src/Components/NavBar/NavBar.css
+++ b/my-app/src/Components/NavBar/NavBar.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-around;
     align-items:center;
-    padding: 0 1 rem;
+    padding: 0 1rem;
     z-index:3;
     flex-wrap: wrap;
     position: absolute;
@@ -35,6 +35,7 @@
 
     font-size: large;
     color: rgba(5, 62, 138, 0.699);
+    cursor: pointer;
 }
 li{
     padding: 1rem;
@@ -88,9 +89,10 @@ li{
     }
     .Mobile-menu-bottom{
 
-        width: 100%;
+        width: 90%;
         text-align: center;
         padding:1rem;
+        box-sizing: border-box;
 
     }
     .menu-Buttons{
@@ -112,6 +114,7 @@ li{
         justify-content: space-evenly;
         margin: 1rem 0;
         transform: scale(1.4);
+        overflow: hidden;
         
     }
     .Social-Media .icon:hover{
