--- a/my-app/src/Components/Select/Selects.css
+++ b/my-app/src/Components/Select/Selects.css
@@ -12,6 +12,6 @@
 @media screen and (max-width : 940px){
 
     .Selects-Container{
-        grid-template-columns: 1fr ;
+        grid-template-columns:repeat(2, 1fr) ;
     }
 }
