--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -41,7 +41,8 @@ h2 {
 .container{
   max-width: 1240px;
   margin:auto;
-  padding: 0 1rem;
+  padding: 0 .35rem;
+  overflow: hidden;
 }
 button{
   background-image: linear-gradient(45deg,var(--primary-dark)0%,var(--primary-light) 100%);
